# fastapi-sqlalchemy-mono-template

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  manage.py  pyproject.toml  requirement.txt  requirements.txt  run.sh
app/: alembic.ini  main.py  manage.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  items.py  users.py
app/commands/: migrate_cli.py  user_cli.py
app/core/: configs.py  http_client.py  sercurity.py
app/db/: base.py  deps.py  mixin.py  session.py
app/extensions/: celery.py
app/migration/: env.py
app/models/: item.py  user.py
app/services/: item.py  user.py
app/task/: hello_celery.py
app/utils/: helpers.py
migration/: env.py
scripts/: format-imports.sh
src/: main.py
src/app/controllers/: auth.py  deps.py  items.py  test.py  users.py
src/app/models/: item.py  user.py
src/app/services/: item.py  user.py
src/commands/: user_cli.py
src/config/: settings.py
src/db/: base.py  base_model.py  deps.py  mixin.py  session.py
src/extensions/: celery.py
src/routes/v1/: api.py
src/schemas/: base.py  item.py  test.py  user.py
src/utils/: helpers.py  http_client.py  sercurity.py
task/: hello_celery.py
